# OpenGL

./: CMakeLists.txt  README.md
include/: Camera.h  Drawable.h  ObjectManager.h  Renderer.h  Shader.h
src/: Camera.cpp  Drawable.cpp  ObjectManager.cpp  Shader.cpp  main.cpp  shad.frag  shad.vert
src/shaders/: shad.frag  shad.vert
